tests/should-not-compile/assign-null-to-real-variable.talc
r:real = 0.0;
// EXPECTED ERROR: type null-type cannot be assigned to variable "r" of type real
r = null;
